--- a/root/style.css
+++ b/root/style.css
@@ -11,15 +11,26 @@
 body {
     font-size: 1.6rem;
 }
+/* -------------------------------GLOBAL------------------------------- */
+
 
 .wrapper_login {
     background-color: black;
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
+    gap: 5rem;
     justify-content: center;
     align-items: center;
     position: relative;
+}
+
+.title h1 {
+    color: white;
+    font-size: 5rem;
+
+    font-weight: 800;
 }
 
 .login {
@@ -62,13 +73,13 @@ bottom: 8rem;
 
 }
 
-.input_logar {
+#input_logar {
     height: 4rem;
     
     border: none;
     border-radius: 4rem;
 
-    background-color: green!important;
+    background-color: green;
     color: white;
 
     cursor: pointer;
@@ -77,7 +88,7 @@ bottom: 8rem;
     bottom: -5rem;
     
 }
-.input_logar:hover {
+#input_logar:hover {
     background-color: rgb(0, 92, 0);
     transition: 300ms;
 }
@@ -91,6 +102,7 @@ bottom: 8rem;
     border: none;
 }
 
+/* -------------------------------FIM_GLOBAL------------------------------- */
 
 /* -------------------------------Cadastro_produto------------------------------- */
 .form_cadastro_produto form {
@@ -117,12 +129,18 @@ bottom: 8rem;
     
 }
 #cadastro_prod {
-    bottom: -2rem;
+    height: 4rem;
+    
     border: none;
     border-radius: 4rem;
 
     background-color: green;
     color: white;
+
+    cursor: pointer;
+
+    position: relative;
+    bottom: -2rem;
 }
 #cadastro_prod:hover {
     background-color: rgb(0, 92, 0);
