--- a/root/style.css
+++ b/root/style.css
@@ -48,7 +48,11 @@ body {
 .login form {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 2rem;
+
+}
+.inputBox:nth-of-type(2) {
+    gap: 9rem;
 
 }
 .login img{
@@ -60,17 +64,31 @@ bottom: 8rem;
 
 
 }
-.login input {
+#inputUser{
+    background: none!important;
+    border: none;
+    border-bottom: 1px solid rgb(0, 0, 0);
+    outline: none;
     width: 100%;
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    box-shadow: 1px 1px 2px #333333;
-    -moz-box-shadow: 1px 1px 2px #333333;
-    -webkit-box-shadow: 1px 1px 2px #333333;
-    background: #cccccc;
-    border: 1px solid #000000;
-
+    letter-spacing: 1px;
+}
+.inputBox {
+    position: relative;
+}
+.labelInput {
+position: absolute;
+top: 0;
+left: 0;
+pointer-events: none;
+transition: .5s;
+}
+#inputUser:focus ~ .labelInput,
+#inputUser:valid ~ .labelInput
+ {
+    top: -20px;
+    left: -1rem;
+    transform: scale(.8);
+    color: rgb(7, 7, 97);
 }
 
 #input_logar {
@@ -92,7 +110,7 @@ bottom: 8rem;
     background-color: rgb(0, 92, 0);
     transition: 300ms;
 }
-#email,
+/* #email,
 #senha {
     height: 4rem;
 
@@ -100,7 +118,7 @@ bottom: 8rem;
 
     border-radius: 2rem;
     border: none;
-}
+} */
 
 /* -------------------------------FIM_GLOBAL------------------------------- */
 
